# Ran_AutoFire

./: .gitignore
ros_ws/src/hnurm_autoaim/: CMakeLists.txt  package.xml
ros_ws/src/hnurm_autoaim/assets/: param.yml
ros_ws/src/hnurm_autoaim/include/aimer/auto_aim/predictor/motion/: top_model.cpp
ros_ws/src/hnurm_autoaim/include/base/debug/: debug.hpp
ros_ws/src/hnurm_autoaim/include/common/: common.hpp
ros_ws/src/hnurm_autoaim/include/core_io/: robot.hpp
ros_ws/src/hnurm_autoaim/src/: autoaim_node.cpp
ros_ws/src/hnurm_bringup/: CMakeLists.txt  package.xml
ros_ws/src/hnurm_bringup/config/: launch_params.yaml
ros_ws/src/hnurm_bringup/config/camera_info/: 2BDFA7447491.yaml
ros_ws/src/hnurm_bringup/include/hnurm_bringup/: sentry_manage_node.h
ros_ws/src/hnurm_bringup/launch/: charuco_calibration.launch.py  chessboard_calibration.launch.py  compose.launch.py  hnurm_vision.launch.py
ros_ws/src/hnurm_bringup/params/: bringup.yaml
ros_ws/src/hnurm_bringup/src/: compose_node.cpp  sentry_manage_node.cpp
ros_ws/src/hnurm_camera/: package.xml
ros_ws/src/hnurm_camera/include/hnurm_camera/: Camera.h  camera_node.hpp
ros_ws/src/hnurm_camera/params/: default.yaml
ros_ws/src/hnurm_camera/src/: Camera.cpp  camera_node.cpp
ros_ws/src/hnurm_interfaces/: CMakeLists.txt
ros_ws/src/hnurm_interfaces/msg/detect/: ArmorArray.msg
ros_ws/src/hnurm_interfaces/msg/uart/: VisionRecvData.msg  VisionSendData.msg
ros_ws/src/hnurm_interfaces/msg/uart_new/: Serial2Vision.msg  Vision2Serial.msg
ros_ws/src/hnurm_interfaces/srv/: SetSelfColor.srv  SetWorkMode.srv
ros_ws/src/hnurm_uart/include/hnurm_uart/: Serialcodec.h  bsp_crc16.h  bsp_crc8.h  protocol.h  serial.h  uart_node.hpp
ros_ws/src/hnurm_uart/params/: default.yaml
ros_ws/src/hnurm_uart/src/: main.cpp  uart_node.cpp
ros_ws/src/hnurm_uart/src/CRC/: bsp_crc16.cpp  bsp_crc8.cpp
ros_ws/src/hnurm_uart/src/Protocol/: protocol.cpp
ros_ws/src/hnurm_uart/src/Serial/: Serialcodec.cpp  (+1 more)
(+2 files in other folders)
